--- a/README
+++ b/README
@@ -6,6 +6,9 @@ This is plugin for roundcube
 
 Install
 ----------------------------------------
+
+Open config/main.inc.php or config/config.inc.php
+
 1- Add the plugin to roundcube $config['plugins'] array like:
 
 $config['plugins'] = array(
