--- a/README
+++ b/README
@@ -35,3 +35,5 @@ Testing
 ----------------------------------------
 Tested 14.03.2014 on RoundCube 1.0-RC
 Tested 24.03.2014 on RoundCube 0.9.5
+Tested 31.07.2014 on RoundCube 1.0.1
+
