--- a/README
+++ b/README
@@ -37,5 +37,6 @@ Tested 14.03.2014 on RoundCube 1.0-RC
 Tested 24.03.2014 on RoundCube 0.9.5
 Tested 31.07.2014 on RoundCube 1.0.1
 Tested 30.08.2014 on RoundCube 1.0.2
+Tested 23.03.2015 on Roundcube 1.0.3
 Tested 23.03.2015 on Roundcube 1.1.0 (UP version to 0.2.4)
 
