--- a/README
+++ b/README
@@ -40,3 +40,4 @@ Tested 30.08.2014 on RoundCube 1.0.2
 Tested 23.03.2015 on Roundcube 1.0.3
 Tested 23.03.2015 on Roundcube 1.1.0 (UP version to 0.2.4)
 
+Work with roundcube 1.1.5
